--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
 		  <artifactId>modelmapper</artifactId>
 		  <version>3.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
